# cas-offinder_with_primer3

./: .gitignore  Dockerfile  README.md  progress.md  pyproject.toml
app/: streamlit_app.py
docker/: Dockerfile
docs/: production-deployment.md  redesign-input.md
scripts/: download_genomes.py
src/otp/: annotate.py  cache.py  cas_offinder.py  config.py  genome.py  genomes.py  pipeline.py  plots.py  primer.py  rank.py  redesign.py  report.py  web_commands.py
tests/: test_annotation.py  test_cache.py  test_cas_offinder.py  test_coords.py  test_download_genomes.py  test_genome_fetch.py  test_genomes.py  test_pipeline_genomes.py  test_primer_design.py  test_redesign.py  test_report.py  test_web_commands.py
